[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/triggers/dialog-trigger/dialog-trigger.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 289 )

[node name="dialogTrigger" type="Node2D"]
script = ExtResource( 1 )
type = 1

[node name="dialogTriggerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="dialogTriggerCollider" type="CollisionShape2D" parent="dialogTriggerArea"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -26.0
margin_top = -291.0
margin_right = 24.0
margin_bottom = 287.0
color = Color( 0.14902, 0, 1, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="dialogTriggerArea" to="." method="_on_dialogTriggerArea_body_entered"]
